--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t mitsuru53/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run mitsuru53/docker-run npm run test -- --coverage
+  - docker run mitsuru53/docker-react npm run test -- --coverage
